--- a/Project/workspace/MapYou/res/layout/new_map_me.xml
+++ b/Project/workspace/MapYou/res/layout/new_map_me.xml
@@ -14,30 +14,9 @@
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="50dp"
-            android:layout_gravity="center"
-            android:layout_marginBottom="20dp"
-            android:gravity="center"
-            android:orientation="horizontal" >
-
-            <TextView
-                android:id="@+id/textView5"
-                android:layout_width="127dp"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="5dp"
-                android:background="@color/LightBlue"
-                android:gravity="center"
-                android:text="MapMe"
-                android:textAppearance="?android:attr/textAppearanceLarge"
-                android:textSize="30sp" />
-
-        </LinearLayout>
-
-        <LinearLayout
-            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
-            android:layout_marginTop="4dp"
+            android:layout_marginTop="15dp"
             android:gravity="center"
             android:orientation="horizontal" >
 
@@ -48,7 +27,7 @@
                 android:layout_gravity="center"
                 android:ems="10"
                 android:gravity="left"
-                android:hint="name"
+                android:hint="name MapMe"
                 android:inputType="textPostalAddress" />
         </LinearLayout>
 
@@ -109,7 +88,7 @@
 
         <RelativeLayout
             android:layout_width="match_parent"
-            android:layout_height="201dp"
+            android:layout_height="250dp"
             android:layout_gravity="center"
             android:layout_marginTop="15dp" >
 
@@ -117,7 +96,7 @@
                 android:id="@+id/map2"
                 android:name="com.google.android.gms.maps.MapFragment"
                 android:layout_width="match_parent"
-                android:layout_height="200dp" />
+                android:layout_height="250dp" />
         </RelativeLayout>
 
         <LinearLayout
