--- a/Project/workspace/MapYou/res/layout/mapme_second_tab.xml
+++ b/Project/workspace/MapYou/res/layout/mapme_second_tab.xml
@@ -17,26 +17,27 @@
             android:layout_marginTop="18dp"
             android:gravity="center"
             android:numColumns="auto_fit" >
-
         </GridView>
 
-        <LinearLayout
-            android:layout_width="match_parent"
+        <Button
+            android:id="@+id/buttonSendPartecipation"
+            android:layout_width="238dp"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="15dp"
-            android:layout_marginRight="15dp"
-            android:layout_marginTop="18dp"
-            android:gravity="center" >
+            android:layout_gravity="center"
+            android:layout_weight="0.37"
+            android:gravity="center"
+            android:onClick="sendPartecipation"
+            android:text="Send partecipation" />
 
-            <Button
-                android:id="@+id/buttonSendPartecipation"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginBottom="15dp"
-                android:layout_marginTop="0dp"
-                android:text="Send partecipation" 
-                android:onClick="sendPartecipation"/>
-        </LinearLayout>
+        <Button
+            android:id="@+id/button1"
+            android:layout_width="240dp"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:layout_weight="0.23"
+            android:onClick="refresh"
+            android:text="Refresh" />
+
     </LinearLayout>
 
 </ScrollView>
